src/objects/Sales_Area__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Areas</relationshipLabel>
        <relationshipName>Sales_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Limit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Distribution Channel</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Division</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inco_Terms__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inco Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Org</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Conditions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Conditions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Terms of Payment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Delete</label>
        <type>Checkbox</type>
    </fields>
    <label>Sales Area</label>
    <nameField>
        <displayFormat>SalesArea--{00000}</displayFormat>
        <label>Sales Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Areas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>